CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("HW4" CXX)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-missing-braces")
SET(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/inc")
SET(STB_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/stb")

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_SEARCH_MODULE(GLM REQUIRED glm)
FIND_PACKAGE(Boost 1.40 COMPONENTS filesystem program_options system REQUIRED)
FIND_PACKAGE(Threads)

FILE(GLOB_RECURSE CXX_SOURCES src/*.cpp)

ADD_EXECUTABLE(hw4 ${CXX_SOURCES})
TARGET_LINK_LIBRARIES(hw4 ${GLM_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
TARGET_INCLUDE_DIRECTORIES(hw4 PUBLIC ${INCLUDE_DIR} ${GLM_INCLUDE_DIRS} ${STB_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(hw4 PUBLIC ${GLM_CFLAGS_OTHER})
