CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("HW4" CXX)

OPTION(HW4_ENABLE_THREADS "Enable multithreading support" ON)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-missing-braces")
SET(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/inc")
SET(STB_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/stb")

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_SEARCH_MODULE(GLM REQUIRED glm)

IF(DEFINED BOOST_STATIC_LIBRARY_DIR)
    SET(Boost_LIBRARIES "${BOOST_STATIC_LIBRARY_DIR}/libboost_filesystem-s.a" "${BOOST_STATIC_LIBRARY_DIR}/libboost_program_options-s.a" "${BOOST_STATIC_LIBRARY_DIR}/libboost_system.a" "${BOOST_STATIC_LIBRARY_DIR}/libboost_system-s.a")
ELSE()
    FIND_PACKAGE(Boost 1.40 COMPONENTS filesystem program_options system REQUIRED)
ENDIF()

IF(HW4_ENABLE_THREADS)
    ADD_DEFINITIONS(-DHW4_ENABLE_THREADS)
    FIND_PACKAGE(Threads)
ELSE()
    ADD_DEFINITIONS(-DBOOST_NO_CXX11_HDR_ATOMIC -DBOOST_NO_CXX11_HDR_FUTURE -DBOOST_NO_CXX11_HDR_THREAD)
ENDIF()

FILE(GLOB_RECURSE CXX_SOURCES src/*.cpp)

ADD_EXECUTABLE(hw4 ${CXX_SOURCES})
TARGET_LINK_LIBRARIES(hw4 ${GLM_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
TARGET_INCLUDE_DIRECTORIES(hw4 PUBLIC ${INCLUDE_DIR} ${GLM_INCLUDE_DIRS} ${STB_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(hw4 PUBLIC ${GLM_CFLAGS_OTHER} -DGLM_FORCE_CTOR_INIT)
